--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
   <header class="main-navigation">
     <div class="container nav-container">
-      <h1 class="logo-heading">Fun Bus</h1>
+      <h1 id='head1' class="logo-heading">Fun Bus</h1>
       <nav class="nav">
-        <a class="nav-link" href="#">Home</a>
-        <a class="nav-link" href="#">About Us</a>
-        <a class="nav-link" href="#">Blog</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a id='nav1' class="nav-link" href="#">Home</a>
+        <a id='nav2' class="nav-link" href="https://learn.lambdaschool.com/fsw/module/recjwv3rifa4nfxbn">About Us</a>
+        <a id='nav3' class="nav-link" href="#">Blog</a>
+        <a id='nav4' class="nav-link" href="#">Contact</a>
       </nav>
     </div>
   </header>
